Refactoring the code to allow adding different volumes based on user choice. Added the ProductVolume class and refactored the Product class and the ProductService service. Refactoring is in progress.