@@ -6,11 +6,9 @@ import com.etherea.exception.ProductNotFoundException;
 import com.etherea.services.ProductService;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import io.micrometer.common.util.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
@@ -20,7 +18,6 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @CrossOrigin
 @RestController
@@ -54,18 +51,14 @@ public class ProductController {
                                               @RequestParam("product") String productJson) {
         try {
             // Check if required parameters are present
-            if (file.isEmpty() || StringUtils.isBlank(productJson)) {
+            if (file.isEmpty() || productJson.isBlank()) {
                 return ResponseEntity.badRequest().body("Required parameters are missing");
             }
-
             logger.info("Request Body: {}", productJson);
 
             ObjectMapper objectMapper = new ObjectMapper();
             ProductDTO productDTO = objectMapper.readValue(productJson, ProductDTO.class);
-            productService.saveProduct(productDTO, file);
-
-            return ResponseEntity.ok("Product saved successfully");
-
+            return productService.saveProduct(productDTO, file);
         } catch (JsonProcessingException e) {
             logger.error("JSON deserialization error", e);
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
